# SecondaryCoolantProps

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  base_fluids.html  cli.html  fluid_base.html  fluid_ethyl_alcohol.html  fluid_ethylene_glycol.html  fluid_instances.html  fluid_melinder.html  fluid_methyl_alcohol.html  fluid_propylene_glycol.html  fluid_water.html  genindex.html  index.html  objects.inv  prog_usage.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs.yml  flake8.yml  release.yml  test.yml  tests.yml
_modules/: index.html
_modules/scp/: base_fluid.html  base_melinder.html  ethyl_alcohol.html  ethylene_glycol.html  water.html  (+2 more)
_sources/: fluid_base.rst.txt  fluid_ethyl_alcohol.rst.txt  fluid_ethylene_glycol.rst.txt  fluid_instances.rst.txt  fluid_methyl_alcohol.rst.txt  fluid_propylene_glycol.rst.txt  fluid_water.rst.txt
docs/: base_fluids.rst  cli.rst  conf.py  fluid_base.rst  fluid_ethyl_alcohol.rst  fluid_ethylene_glycol.rst  fluid_melinder.rst  fluid_methyl_alcohol.rst  fluid_propylene_glycol.rst  fluid_water.rst  ghe.rst  index.rst  prog_usage.rst
ghe/: library.py  main.py
scp/: __init__.py  antifreeze_props.vb  base.py  base_fluid.py  base_melinder.py  cli.py  ethyl_alcohol.py  ethylene_glycol.py  fluid.py  methyl_alcohol.py  propylene_glycol.py  water.py
scripts/: water_props.vb  write_tests.py
tests/: test_ethlylene_glycol.py  test_ethyl_alcohol.py  test_library.py  test_methyl_alcohol.py  test_multiple.py  test_propylene_glycol.py  test_water.py  utilities.py
