[project]
name = "ghedesigner"
version = "1.3"
description = "Fluid property routines for secondary coolants based on correlations developed by Åke Melinder, 2010 \"Properties of Secondary Working Fluids for Indirect Systems\" 2nd ed., International Institute of Refrigeration."
authors = ["Matt Mitchell <mitchute@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
  "click>=8.1"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
scprop = "scp:cli:cli"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
# Manually add these flags to `pytest` when running locally for coverage details.
addopts = ["--cov=scp", "--cov-report=html"]
